# roxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.dev.yaml  docker-compose.yaml
certs/: cert.pem  key.pem
docs/: 환경변수.md
nginx/: api-1.conf  api-2.conf  api.conf  web-1.conf  web-2.conf  web.conf
src/: config.rs  docker.rs  lib.rs  logging.rs  main.rs  proxy.rs  routing.rs  tls.rs
src/docker/: client.rs  container.rs  error_types.rs  events_types.rs  health.rs  mod.rs  retry.rs
src/middleware/: chain.rs  config.rs  error.rs  manager.rs  mod.rs  parser.rs  response.rs  traits.rs
src/middleware/basic_auth/: auth.rs  config.rs  middleware.rs  mod.rs
src/middleware/cors/: config.rs  middleware.rs  mod.rs
src/middleware/headers/: config.rs  middleware.rs  mod.rs
src/middleware/rate_limit/: config.rs  middleware.rs  mod.rs  store.rs
src/routing_v2/: backend.rs  error.rs  host.rs  matcher.rs  mod.rs  table.rs
src/server/: docker.rs  error.rs  handler.rs  listener.rs  manager.rs  manager_v2.rs  mod.rs
src/settings/: converter.rs  docker.rs  error.rs  json.rs  logging.rs  mod.rs  parser.rs  raw.rs  schema.rs  server.rs  tls.rs  types.rs  validator.rs  watcher.rs
test/api/: index.html
test/web/: index.html
tests/: docker_test.rs  middleware_test.rs  retry_test.rs  routing_test.rs  routing_v2_test.rs  server_test.rs  settings_test.rs
tests/middleware/: config_test.rs  mod.rs  parser_test.rs
tests/routing_v2/: backend_test.rs  host_test.rs  integration_test.rs  matcher_test.rs  mock.rs  mod.rs  table_test.rs
