[package]
name = "reverse_proxy_traefik"
version = "0.1.0"
edition = "2021"

[lib]
name = "reverse_proxy_traefik"
path = "src/lib.rs"

[[bin]]
name = "reverse_proxy_traefik"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
hyper = { version = "1.6.0", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1.0"
bollard = "0.15"
futures-util = "0.3"
